# dotfiles

./: .bashrc  .gitconfig  .gitignore  .spacemacs  .stow-local-ignore  .tmux.conf  .vimrc  .wezterm.lua  .zshrc  Dockerfile  DockerfileMacbook  LICENSE  README.md  TODO.md  i3-navigate-emacs  init.sh  init.vim  install.sh  iterm2.json  macos.md  pyproject.toml  remaps.ahk  run  run-home  setup.sh  test.py  utils.md  windows.md  wsl.conf
.config/fish/functions/: create_venv.fish  create_venv_from_git.fish  kill_other_mosh_sessions.fish  vpn.fish
.config/lazygit/: config.yml
.config/nvim/: .luarc.json  init.lua  init.vim  lazy-lock.json
.config/nvim/lua/: clipboard.lua  globals.lua  init.lua.proto
.config/nvim/lua/plugins/: autopairs.lua  catppuccin.lua  comment.lua  dap.lua  easymotion.lua  harpoon.lua  lsp.lua  lualine.lua  oil.lua  repl.lua  tagbar.lua  telescope.lua  tests.lua  treesitter.lua  trouble.lua  vim-floaterm.lua
.dotfiles/: mappings.json
caps2esc_config/: README.md  udevmon.service  udevmon.yaml
manjaro-i3-dotfiles/: .Xresources  .bashrc  .i3status.conf
manjaro-i3-dotfiles/.config/: mimeapps.list
manjaro-i3-dotfiles/.i3/: config
manjaro-i3-dotfiles/etc/default/: keyboard
manjaro-i3-scripts/: keyboard.sh  laptop.sh
sandbox/: main.py  test_main.py
scripts/: dell.sh  multi-screen.sh
wsl/: vcxsrv-i3.cmd
