[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles environment for Python REPL and tooling."
authors = ["Alexander Tatchin <alexander.tatchin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
jupyterlab = "^4.1.5"
jupyter-client = "^8.6.1"
pillow = "^10.2.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
